Can add saved maths to lists below the calculator

--- a/style.css
+++ b/style.css
@@ -57,14 +57,14 @@ button {
   width: 50px;
 }
 
-#saved-title {
+#saved-math {
   position: absolute;
   font-size: 20px;
   text-align: center;
   height: 250px;
   width: 140px;
-  margin-top: -18%;
-  margin-left: 95%;
+  margin-top: auto;
+  margin-left: auto;
   margin-right: auto;
   background-color: red;
   border: 2px solid black;
