--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@ button {
 
 #saved-math {
   position: absolute;
+  vertical-align: top;
   font-size: 20px;
-  text-align: center;
   height: 250px;
   width: 140px;
   margin-top: auto;
@@ -70,6 +70,12 @@ button {
   border: 2px solid black;
   border-radius: 8px;
   background-color: green;
+}
+
+#list-saved-maths {
+  position: absolute;
+  vertical-align: top;
+  font-size: 13px;
 }
 
 #save-button {
