--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: arial;
-  background-color: aqua;
+  background: -webkit-linear-gradient(left, #4d79ff, #e6ecff);
+  color: #f2f2f2;
 }
 
 #calculator {
@@ -9,7 +10,7 @@ body {
   margin-top: 10%;
   margin-left: auto;
   margin-right: auto;
-  background-color: red;
+  background-color: #bfbfbf;
   border: 2px solid black;
   border-radius: 20px;
 }
@@ -22,7 +23,7 @@ body {
   margin-right: auto;
   border: 2px solid black;
   border-radius: 6px;
-  background-color: yellow;
+  background-color: #4d4d4d;
 }
 
 #entry {
@@ -66,14 +67,14 @@ button {
   margin-top: auto;
   margin-left: auto;
   margin-right: auto;
-  background-color: red;
   border: 2px solid black;
   border-radius: 8px;
-  background-color: green;
+  background-color: #4d4d4d;
+  color: #f2f2f2;
 }
 
 #list-saved-maths {
-  margin-top: 2%;
+  margin-top: 5%;
   margin-left: 10%;
 }
 
@@ -85,6 +86,7 @@ button {
   margin-top: auto;
   margin-left: 2%;
   margin-right: auto;
+  background-color: #b3ffb3;
 }
 
 #cancel-button {
@@ -95,6 +97,7 @@ button {
   margin-top: auto;
   margin-left: 27%;
   margin-right: auto;
+  background-color: #ffcccc;
 }
 
 #equal-button {
